--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
     <link rel="stylesheet" href="styles/2_skills.css" />
     <link rel="stylesheet" href="styles/3_xp.css" />
     <link rel="stylesheet" href="styles/4_education.css" />
+    <link rel="stylesheet" href="styles/5_page.css" />
   </head>
   <body>
     <div class="cv__page">
+      <header>
+        <span></span>
+      </header>
+
       <img class="header__picture" src="assets/images/profile.jpg" alt="Azad Kavian" />
 
       <section class="header__content">
         <h1>Azad Kavian</h1>
-        <h2>Front-End Web Software Team Lead</h2>
+        <h2>Front-End Team Lead | Product Builder</h2>
         <p>
-          Passionate about digital media technologies, social networks, crypto-currencies, AI,
-          gaming and music. Cat-person. Autistic. Fantasy-lover.
+          Passionate about digital media technologies, social networks, gaming and music.
+          Cat-person. Autistic. Fantasy-lover.
         </p>
         <ul class="header__content--contact">
           <li>
@@ -46,10 +51,10 @@
       <section class="skills">
         <h3>Coding Skills</h3>
         <ul class="skills__list">
-          <li>Angular 14</li>
+          <li>Angular 16</li>
           <li>RxJS 7</li>
           <li>Ionic 6</li>
-          <li>JavaScript (ES2020)</li>
+          <li>JavaScript</li>
           <li>CSS/SCSS</li>
           <li>Python3</li>
         </ul>
@@ -81,7 +86,7 @@
         <ul class="skills__list">
           <li>Persian (Native)</li>
           <li>English (Advanced)</li>
-          <li>Italian (Learning)</li>
+          <li>Swedish (Learning)</li>
         </ul>
       </section>
 
@@ -95,12 +100,13 @@
               <em class="xp__header--date"> (2022 - Present) </em>
             </h4>
             <h5 class="xp__header--position" style="color: rgb(4, 167, 187)">
-              Front-end Web Software Team Lead
+              Co-Founder | Front-end Web Software Team Lead
             </h5>
           </div>
           <p class="xp__body">
-            Worked on several projects such as VikarnoIpg, VikarnoTrade, TousMoney, Ariantique and
-            UniqueVoice using Angular14, Ionic6, RxJS and NgXS.
+            In Vikarno, we design and develop enterprise financial systems and platforms. As a team
+            lead, I play a part as a software architect and lead the front-end team to develop the
+            finest product in the given timeline using Angular16, Ionic6 and NgXS technologies.
           </p>
         </li>
         <li>
@@ -108,15 +114,15 @@
           <div class="xp__header">
             <h4 class="xp__header--title">
               Navaak
-              <em class="xp__header--date"> (2017 - Present) </em>
+              <em class="xp__header--date"> (2017 - 2023) </em>
             </h4>
             <h5 class="xp__header--position" style="color: rgb(32, 181, 156)">
               Front-end Web Software Developer
             </h5>
           </div>
           <p class="xp__body">
-            Worked on several projects such as Navaak Admin Panel, Navaak Publisher Panel and Qtical
-            Panel using Angular14, RxJS and NgXS.
+            Designed and developed on several projects such as Navaak Admin Panel, Navaak Publisher
+            Panel and Qtical Panel using Angular14, RxJS and NgXS.
           </p>
         </li>
         <li>
@@ -162,7 +168,10 @@
               Programming Instructor
             </h5>
           </div>
-          <p class="xp__body">Taught programming in Java, Python and C++ languages.</p>
+          <p class="xp__body">
+            Over the years, I taught programming to junior students in Java, Python and C++
+            languages across different branches of the institute.
+          </p>
         </li>
       </ol>
 
