--- a/index.html
+++ b/index.html
@@ -18,183 +18,204 @@
     <link rel="stylesheet" href="styles/5_page.css" />
   </head>
   <body>
-    <div class="cv__page">
-      <header>
-        <span></span>
-      </header>
+    <div class="cv__wrapper">
+      <div class="cv__border"></div>
+      <div class="cv__page">
+        <aside>
+          <img class="header__picture" src="assets/images/profile.png" alt="Azad Kavian" />
+          <section class="skills">
+            <h3>Programming Skills</h3>
+            <ul class="skills__list">
+              <li>Angular</li>
+              <li>RxJS/Signal</li>
+              <li>NgXS</li>
+              <li>Ionic</li>
+              <li>JavaScript</li>
+              <li>SCSS</li>
+              <li>Bulma/Material/Prime</li>
+              <li>Python3/Flask/SciKit</li>
+              <li>Node/Express</li>
+            </ul>
 
-      <img class="header__picture" src="assets/images/profile.jpg" alt="Azad Kavian" />
+            <h3>Software Development Skills</h3>
+            <ul class="skills__list">
+              <li>RESTful APIs</li>
+              <li>GraphQL</li>
+              <li>Git</li>
+              <li>Docker</li>
+              <li>CI/CD Pipelines</li>
+              <li>CleanCode/SOLID/DRY</li>
+            </ul>
 
-      <section class="header__content">
-        <h1>Azad Kavian</h1>
-        <h2>Front-End Team Lead | Product Builder</h2>
-        <p>
-          Passionate about digital media technologies, social networks, gaming and music.
-          Cat-person. Autistic. Fantasy-lover.
-        </p>
-        <ul class="header__content--contact">
-          <li>
-            <img class="cv__icon" src="assets/icons/icon-mail.svg" />
-            <b>azad.kavian@gmail.com</b>
-          </li>
-          <li>
-            <img class="cv__icon" src="assets/icons/icon-phone.svg" />
-            <b>+989981449285</b>
-          </li>
-          <li>
-            <img class="cv__icon" src="assets/icons/icon-linkedin.svg" />
-            <b>linkedin.com/in/azadkavian/</b>
-          </li>
-        </ul>
-      </section>
+            <h3>Computer Skills</h3>
+            <ul class="skills__list">
+              <li>Design Tools (Figma)</li>
+              <li>Graphic Tools (Photoshop)</li>
+              <li>Office Tools (Word/GoogleSheets)</li>
+              <li>Audio Tools (GarageBand)</li>
+              <li>Video Tools (DaVinci Resolve)</li>
+            </ul>
 
-      <section class="skills">
-        <h3>Coding Skills</h3>
-        <ul class="skills__list">
-          <li>Angular 16</li>
-          <li>RxJS 7</li>
-          <li>Ionic 6</li>
-          <li>JavaScript</li>
-          <li>CSS/SCSS</li>
-          <li>Python3</li>
-        </ul>
+            <h3>Organizational Skills</h3>
+            <ul class="skills__list">
+              <li>Presentation</li>
+              <li>Management</li>
+              <li>Leadership</li>
+              <li>Teamwork</li>
+            </ul>
 
-        <h3>Computer Skills</h3>
-        <ul class="skills__list">
-          <li>Design Tools (Figma)</li>
-          <li>Graphic Tools (Affinity Photo)</li>
-          <li>Office Tools (MSWord/GoogleSheets)</li>
-          <li>Audio Tools (GarageBand/Audition)</li>
-          <li>Video Tools (DaVinci Resolve)</li>
-        </ul>
+            <h3>Personal Skills</h3>
+            <ul class="skills__list">
+              <li>Gaming (Digital/Tabletop)</li>
+              <li>Music (Guitar/Vocal/Production)</li>
+              <li>Cooking</li>
+            </ul>
 
-        <h3>Organizational Skills</h3>
-        <ul class="skills__list">
-          <li>Presentation</li>
-          <li>Leadership</li>
-          <li>Teamwork</li>
-        </ul>
+            <h3>Language Skills</h3>
+            <ul class="skills__list">
+              <li>Persian (Native)</li>
+              <li>English (Advanced)</li>
+              <li>Swedish (Learning)</li>
+            </ul>
+          </section>
+        </aside>
 
-        <h3>Personal Skills</h3>
-        <ul class="skills__list">
-          <li>Gaming (Digital/Tabletop)</li>
-          <li>Music (Guitar/Vocal/Production)</li>
-          <li>Cooking</li>
-        </ul>
+        <main>
+          <section class="header__content">
+            <h1>Azad Kavian</h1>
+            <h2>Front-End Expert | Product Builder</h2>
+            <p>
+              I have been mainly a front-end developer using Angular framework, but have done
+              several project with React as well.
+            </p>
+            <p>
+              I am passionate about digital media technologies, social networks, gaming and music.
+              Also a cat-person, autistic and fantasy-lover.
+            </p>
+            <ul class="header__content--contact">
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-mail.svg" />
+                <b>azad.kavian@gmail.com</b>
+              </li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-phone.svg" />
+                <b>+98 998 144 9285</b>
+              </li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-linkedin.svg" />
+                <b>linkedin.com/in/azadkavian</b>
+              </li>
+            </ul>
+          </section>
 
-        <h3>Language Skills</h3>
-        <ul class="skills__list">
-          <li>Persian (Native)</li>
-          <li>English (Advanced)</li>
-          <li>Swedish (Learning)</li>
-        </ul>
-      </section>
+          <ol class="xp">
+            <h3>Work Experiences</h3>
+            <li>
+              <img src="assets/images/logo-vikarno.svg" class="xp__logo" />
+              <div class="xp__header">
+                <h4 class="xp__header--title">
+                  Vikarno
+                  <em class="xp__header--date"> (2022 - Present) </em>
+                </h4>
+                <h5 class="xp__header--position" style="color: rgb(4, 167, 187)">
+                  Co-Founder | Front-end Web Software Team Lead
+                </h5>
+              </div>
+              <p class="xp__body">
+                In Vikarno, we design and develop enterprise financial systems and platforms. As a
+                team lead, I play a part as a software architect and lead the front-end team to
+                develop the finest product in the given timeline using Angular16, Ionic6 and NgXS
+                technologies.
+              </p>
+            </li>
+            <li>
+              <img src="assets/images/logo-navaak.png" class="xp__logo" />
+              <div class="xp__header">
+                <h4 class="xp__header--title">
+                  Navaak
+                  <em class="xp__header--date"> (2017 - 2023) </em>
+                </h4>
+                <h5 class="xp__header--position" style="color: rgb(32, 181, 156)">
+                  Front-end Web Software Developer
+                </h5>
+              </div>
+              <p class="xp__body">
+                Designed and developed on several projects such as Navaak Admin Panel, Navaak
+                Publisher Panel and Qtical Panel using Angular14, RxJS and NgXS.
+              </p>
+            </li>
+            <li>
+              <img src="assets/images/logo-didex.png" class="xp__logo" />
+              <div class="xp__header">
+                <h4 class="xp__header--title">
+                  DidEx
+                  <em class="xp__header--date"> (2020 - 2022) </em>
+                </h4>
+                <h5 class="xp__header--position" style="color: rgb(247, 168, 43)">
+                  Front-end Web Software Team Lead
+                </h5>
+              </div>
+              <p class="xp__body">
+                Worked on several projects such as DidEx Trade, DidEx Exchange and DidEx Invest
+                using Angular13, RxJS and NgXS.
+              </p>
+            </li>
+            <li>
+              <img src="assets/images/logo-takhfifan.png" class="xp__logo" />
+              <div class="xp__header">
+                <h4 class="xp__header--title">
+                  Takhfifan
+                  <em class="xp__header--date"> (2017 - 2017) </em>
+                </h4>
+                <h5 class="xp__header--position" style="color: rgb(236, 105, 121)">
+                  Front-end User Interface Developer
+                </h5>
+              </div>
+              <p class="xp__body">
+                Participated in developing some features and tweaks for Takhfifan's main website
+                using Backbone.js on a PhpMagento platform.
+              </p>
+            </li>
+            <li>
+              <img src="assets/images/logo-tit.png" class="xp__logo" />
+              <div class="xp__header">
+                <h4 class="xp__header--title">
+                  Tehran Institute of Technology
+                  <em class="xp__header--date"> (2015 - 2017) </em>
+                </h4>
+                <h5 class="xp__header--position" style="color: rgb(10, 18, 87)">
+                  Programming Instructor
+                </h5>
+              </div>
+              <p class="xp__body">
+                Over the years, I taught programming to junior students in Java, Python and C++
+                languages across different branches of the institute.
+              </p>
+            </li>
+          </ol>
 
-      <ol class="xp">
-        <h3>Work Experiences</h3>
-        <li>
-          <img src="assets/images/logo-vikarno.svg" class="xp__logo" />
-          <div class="xp__header">
-            <h4 class="xp__header--title">
-              Vikarno
-              <em class="xp__header--date"> (2022 - Present) </em>
-            </h4>
-            <h5 class="xp__header--position" style="color: rgb(4, 167, 187)">
-              Co-Founder | Front-end Web Software Team Lead
-            </h5>
-          </div>
-          <p class="xp__body">
-            In Vikarno, we design and develop enterprise financial systems and platforms. As a team
-            lead, I play a part as a software architect and lead the front-end team to develop the
-            finest product in the given timeline using Angular16, Ionic6 and NgXS technologies.
-          </p>
-        </li>
-        <li>
-          <img src="assets/images/logo-navaak.png" class="xp__logo" />
-          <div class="xp__header">
-            <h4 class="xp__header--title">
-              Navaak
-              <em class="xp__header--date"> (2017 - 2023) </em>
-            </h4>
-            <h5 class="xp__header--position" style="color: rgb(32, 181, 156)">
-              Front-end Web Software Developer
-            </h5>
-          </div>
-          <p class="xp__body">
-            Designed and developed on several projects such as Navaak Admin Panel, Navaak Publisher
-            Panel and Qtical Panel using Angular14, RxJS and NgXS.
-          </p>
-        </li>
-        <li>
-          <img src="assets/images/logo-didex.png" class="xp__logo" />
-          <div class="xp__header">
-            <h4 class="xp__header--title">
-              DidEx
-              <em class="xp__header--date"> (2020 - 2022) </em>
-            </h4>
-            <h5 class="xp__header--position" style="color: rgb(247, 168, 43)">
-              Front-end Web Software Team Lead
-            </h5>
-          </div>
-          <p class="xp__body">
-            Worked on several projects such as DidEx Trade, DidEx Exchange and DidEx Invest using
-            Angular13, RxJS and NgXS.
-          </p>
-        </li>
-        <li>
-          <img src="assets/images/logo-takhfifan.png" class="xp__logo" />
-          <div class="xp__header">
-            <h4 class="xp__header--title">
-              Takhfifan
-              <em class="xp__header--date"> (2017 - 2017) </em>
-            </h4>
-            <h5 class="xp__header--position" style="color: rgb(236, 105, 121)">
-              Front-end User Interface Developer
-            </h5>
-          </div>
-          <p class="xp__body">
-            Participated in developing some features and tweaks for Takhfifan's main website using
-            Backbone.js on a PhpMagento platform.
-          </p>
-        </li>
-        <li>
-          <img src="assets/images/logo-tit.png" class="xp__logo" />
-          <div class="xp__header">
-            <h4 class="xp__header--title">
-              Tehran Institute of Technology
-              <em class="xp__header--date"> (2015 - 2017) </em>
-            </h4>
-            <h5 class="xp__header--position" style="color: rgb(10, 18, 87)">
-              Programming Instructor
-            </h5>
-          </div>
-          <p class="xp__body">
-            Over the years, I taught programming to junior students in Java, Python and C++
-            languages across different branches of the institute.
-          </p>
-        </li>
-      </ol>
-
-      <ol class="education">
-        <h3>Education</h3>
-        <li>
-          <img src="assets/images/logo-aut.jpg" class="education__logo" />
-          <div class="education__header">
-            <h4 class="education__header--title">
-              AmirKabir University of Technology
-              <em class="education__header--date"> (2011 - 2016) </em>
-            </h4>
-            <h5 class="education__header--position" style="color: rgb(0, 0, 0)">
-              Bachelor of Science (BS), Computer Science
-            </h5>
-          </div>
-          <p class="education__body">
-            Worked in Scientific Association of Mathematics and Computer Science. Technical
-            Committee Member of AUT Robotics Competitions (2015). Manager of Turing-Khayyam
-            Festival.
-          </p>
-        </li>
-      </ol>
+          <ol class="education">
+            <h3>Education</h3>
+            <li>
+              <img src="assets/images/logo-aut.jpg" class="education__logo" />
+              <div class="education__header">
+                <h4 class="education__header--title">
+                  AmirKabir University of Technology
+                  <em class="education__header--date"> (2011 - 2016) </em>
+                </h4>
+                <h5 class="education__header--position" style="color: rgb(0, 0, 0)">
+                  Bachelor of Science (BS), Computer Science
+                </h5>
+              </div>
+              <p class="education__body">
+                Worked in Scientific Association of Mathematics and Computer Science. Technical
+                Committee Member of AUT Robotics Competitions (2015). Manager of Turing-Khayyam
+                Festival.
+              </p>
+            </li>
+          </ol>
+        </main>
+      </div>
     </div>
   </body>
 </html>
