--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
               <li>RxJS/Signal</li>
               <li>NgXS</li>
               <li>Ionic</li>
-              <li>JavaScript</li>
+              <li>TypeScript/JavaScript</li>
               <li>SCSS</li>
               <li>Bulma/Material/Prime</li>
               <li>Python3/Flask/SciKit</li>
               <li>Node/Express</li>
             </ul>
 
-            <h3>Software Development Skills</h3>
+            <h3>Developer Skills</h3>
             <ul class="skills__list">
               <li>RESTful APIs</li>
               <li>GraphQL</li>
@@ -83,10 +83,11 @@
         <main>
           <section class="header__content">
             <h1>Azad Kavian</h1>
-            <h2>Front-End Expert | Product Builder</h2>
+            <h2>Front-End Developer | Software Engineer | Product Builder</h2>
             <p>
               I have been mainly a front-end developer using Angular framework, but have done
-              several project with React as well.
+              several project with React as well. I have done several projects as a full-stack
+              developer and have some experiences in UI design and AI development.
             </p>
             <p>
               I am passionate about digital media technologies, social networks, gaming and music.
@@ -118,15 +119,24 @@
                   <em class="xp__header--date"> (2022 - Present) </em>
                 </h4>
                 <h5 class="xp__header--position" style="color: rgb(4, 167, 187)">
-                  Co-Founder | Front-end Web Software Team Lead
+                  Senior Front-end Developer
                 </h5>
               </div>
               <p class="xp__body">
-                In Vikarno, we design and develop enterprise financial systems and platforms. As a
-                team lead, I play a part as a software architect and lead the front-end team to
-                develop the finest product in the given timeline using Angular16, Ionic6 and NgXS
-                technologies.
+                In Vikarno, we design and develop various commercial web software, with a
+                specialization in enterprise financial systems and platforms, to help companies and
+                business owners solve their technical problems.
               </p>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">NgXS</li>
+                <li class="cv__tag">Ionic</li>
+                <li class="cv__tag">Node</li>
+                <li class="cv__tag">Python</li>
+                <li class="cv__tag">UI Design</li>
+                <li class="cv__tag">Management</li>
+              </ul>
             </li>
             <li>
               <img src="assets/images/logo-navaak.png" class="xp__logo" />
@@ -136,13 +146,23 @@
                   <em class="xp__header--date"> (2017 - 2023) </em>
                 </h4>
                 <h5 class="xp__header--position" style="color: rgb(32, 181, 156)">
-                  Front-end Web Software Developer
+                  Front-end Developer
                 </h5>
               </div>
               <p class="xp__body">
-                Designed and developed on several projects such as Navaak Admin Panel, Navaak
-                Publisher Panel and Qtical Panel using Angular14, RxJS and NgXS.
+                I started working as a junior front-end developer back in 2017. But over the years
+                as I learned more and more and gained many experiences by solving challenges and
+                developing different products, I became a senior.
               </p>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">NgXS</li>
+                <li class="cv__tag">UI Design</li>
+                <li class="cv__tag">Python</li>
+                <li class="cv__tag">AI</li>
+                <li class="cv__tag">GraphQL</li>
+              </ul>
             </li>
             <li>
               <img src="assets/images/logo-didex.png" class="xp__logo" />
@@ -152,13 +172,22 @@
                   <em class="xp__header--date"> (2020 - 2022) </em>
                 </h4>
                 <h5 class="xp__header--position" style="color: rgb(247, 168, 43)">
-                  Front-end Web Software Team Lead
+                  Front-end Developer
                 </h5>
               </div>
               <p class="xp__body">
-                Worked on several projects such as DidEx Trade, DidEx Exchange and DidEx Invest
-                using Angular13, RxJS and NgXS.
+                DidEx is a cryptocurrency exchange and trading platform with many products like
+                DidEx Trade, DidEx Exchange, DidEx Auth and DidEx Invest
               </p>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">NgXS</li>
+                <li class="cv__tag">RxJS</li>
+                <li class="cv__tag">WebSocket</li>
+                <li class="cv__tag">Material</li>
+                <li class="cv__tag">Task Assignment</li>
+              </ul>
             </li>
             <li>
               <img src="assets/images/logo-takhfifan.png" class="xp__logo" />
@@ -168,29 +197,20 @@
                   <em class="xp__header--date"> (2017 - 2017) </em>
                 </h4>
                 <h5 class="xp__header--position" style="color: rgb(236, 105, 121)">
-                  Front-end User Interface Developer
+                  Junior Front-end Developer
                 </h5>
               </div>
               <p class="xp__body">
-                Participated in developing some features and tweaks for Takhfifan's main website
-                using Backbone.js on a PhpMagento platform.
+                As my first serious role as a web developer, I participated in developing some
+                features and tweaks for the main website of Takhfifan, and started the Yadisa
+                project as my main activity in the team.
               </p>
-            </li>
-            <li>
-              <img src="assets/images/logo-tit.png" class="xp__logo" />
-              <div class="xp__header">
-                <h4 class="xp__header--title">
-                  Tehran Institute of Technology
-                  <em class="xp__header--date"> (2015 - 2017) </em>
-                </h4>
-                <h5 class="xp__header--position" style="color: rgb(10, 18, 87)">
-                  Programming Instructor
-                </h5>
-              </div>
-              <p class="xp__body">
-                Over the years, I taught programming to junior students in Java, Python and C++
-                languages across different branches of the institute.
-              </p>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Backbone.js</li>
+                <li class="cv__tag">Bootstrap</li>
+                <li class="cv__tag">jQuery</li>
+              </ul>
             </li>
           </ol>
 
