added projects section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/3_xp.css" />
     <link rel="stylesheet" href="styles/4_education.css" />
     <link rel="stylesheet" href="styles/5_page.css" />
+    <link rel="stylesheet" href="styles/6_projects.css" />
   </head>
   <body>
     <div class="cv__wrapper">
@@ -32,7 +33,7 @@
               <li>Ionic</li>
               <li>TypeScript/JavaScript</li>
               <li>SCSS</li>
-              <li>Bulma/Material/Prime</li>
+              <li>Bulma/Material</li>
               <li>Python3/Flask/SciKit</li>
               <li>Node/Express</li>
             </ul>
@@ -85,18 +86,15 @@
             <h1>Azad Kavian</h1>
             <h2>Front-End Developer | Software Engineer | Product Builder</h2>
             <p>
-              I have been mainly a front-end developer using Angular framework, but have done
-              several project with React as well. I have done several projects as a full-stack
-              developer and have some experiences in UI design and AI development.
-            </p>
-            <p>
-              I am passionate about digital media technologies, social networks, gaming and music.
-              Also a cat-person, autistic and fantasy-lover.
+              In addition to being primarily a front-end developer using the Angular framework, I
+              have experience working on numerous projects as a full-stack developer. I've also
+              contributed to a number of projects for designing the UI, and all of these experiences
+              have made me a professional product builder.
             </p>
             <ul class="header__content--contact">
               <li>
                 <img class="cv__icon" src="assets/icons/icon-mail.svg" />
-                <b>azad.kavian@gmail.com</b>
+                <b>azadkavian@gmail.com</b>
               </li>
               <li>
                 <img class="cv__icon" src="assets/icons/icon-phone.svg" />
@@ -214,7 +212,73 @@
             </li>
           </ol>
 
-          <ol class="education">
+          <ol class="projects">
+            <h3>Projects</h3>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Therapist ChatBot (VClinic)
+                  <em>(2023)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Python</li>
+                <li class="cv__tag">Flask</li>
+                <li class="cv__tag">WebSocket</li>
+                <li class="cv__tag">AI</li>
+                <li class="cv__tag">Bulma</li>
+                <li class="cv__tag">Docker</li>
+              </ul>
+            </li>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Intelligent Content Recommender System (Navaak)
+                  <em>(2020 - 2023)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Python</li>
+                <li class="cv__tag">Flask</li>
+                <li class="cv__tag">SQL</li>
+                <li class="cv__tag">Machine Learning</li>
+              </ul>
+            </li>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Startup Application Portal (Stars Wealth Management)
+                  <em>(2019)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">Node</li>
+                <li class="cv__tag">Express</li>
+                <li class="cv__tag">Mongoose</li>
+                <li class="cv__tag">Bulma</li>
+              </ul>
+            </li>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Feature-based Heuristic for Sentiment Classification
+                  <em>(2017)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Python</li>
+                <li class="cv__tag">Numpy</li>
+                <li class="cv__tag">Pandas</li>
+              </ul>
+            </li>
+          </ol>
+
+          <!-- <ol class="education">
             <h3>Education</h3>
             <li>
               <img src="assets/images/logo-aut.jpg" class="education__logo" />
@@ -233,7 +297,7 @@
                 Festival.
               </p>
             </li>
-          </ol>
+          </ol> -->
         </main>
       </div>
     </div>
