--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
                 </h5>
               </div>
               <p class="xp__body">
-                DidEx is a cryptocurrency exchange and trading platform with many products like
-                DidEx Trade, DidEx Exchange, DidEx Auth and DidEx Invest
+                DidEx is a cryptocurrency exchange and trading platform with many products. As a
+                developer with more experience than my other teammates, I designed the software
+                architecture of all of these products and built this platform from scratch.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -213,7 +214,7 @@
           </ol>
 
           <ol class="projects">
-            <h3>Projects</h3>
+            <h3>Side Projects</h3>
             <li>
               <div class="project__header">
                 <h4>
