added mobile view overlay

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="styles/6_projects.css" />
   </head>
   <body>
+    <div class="cv__mobile-overlay">
+      <h1>
+        To see the content of this page properly, please use a device with bigger screen size.
+      </h1>
+    </div>
     <div class="cv__wrapper">
       <div class="cv__border"></div>
       <div class="cv__page">
@@ -278,27 +283,6 @@
               </ul>
             </li>
           </ol>
-
-          <!-- <ol class="education">
-            <h3>Education</h3>
-            <li>
-              <img src="assets/images/logo-aut.jpg" class="education__logo" />
-              <div class="education__header">
-                <h4 class="education__header--title">
-                  AmirKabir University of Technology
-                  <em class="education__header--date"> (2011 - 2016) </em>
-                </h4>
-                <h5 class="education__header--position" style="color: rgb(0, 0, 0)">
-                  Bachelor of Science (BS), Computer Science
-                </h5>
-              </div>
-              <p class="education__body">
-                Worked in Scientific Association of Mathematics and Computer Science. Technical
-                Committee Member of AUT Robotics Competitions (2015). Manager of Turing-Khayyam
-                Festival.
-              </p>
-            </li>
-          </ol> -->
         </main>
       </div>
     </div>
