updated styles and layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       </h1>
     </div>
     <div class="cv__wrapper">
-      <div class="cv__border"></div>
       <div class="cv__page">
         <aside>
           <img class="header__picture" src="assets/images/profile.png" alt="Azad Kavian" />
@@ -73,7 +72,7 @@
             <h3>Personal Skills</h3>
             <ul class="skills__list">
               <li>Gaming (Digital/Tabletop)</li>
-              <li>Music (Guitar/Vocal/Production)</li>
+              <li>Music (Guitar/Vocal)</li>
               <li>Cooking</li>
             </ul>
 
