--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
             <ul class="skills__list">
               <li>Angular</li>
               <li>RxJS/Signal</li>
-              <li>NgXS</li>
-              <li>Ionic</li>
+              <li>NgXS/NgRx</li>
               <li>TypeScript/JavaScript</li>
-              <li>SCSS</li>
-              <li>Bulma/Material</li>
-              <li>Python3/Flask/SciKit</li>
-              <li>Node/Express</li>
+              <li>Material/Bulma/Tailwind</li>
+              <li>Python/Flask/SQLAlchemy</li>
+              <li>Node/Express/Mongoose</li>
+              <li>Ionic</li>
             </ul>
 
             <h3>Developer Skills</h3>
@@ -50,6 +49,7 @@
               <li>Docker</li>
               <li>CI/CD Pipelines</li>
               <li>CleanCode/SOLID/DRY</li>
+              <li>DDD/BDD</li>
             </ul>
 
             <h3>Computer Skills</h3>
@@ -59,6 +59,7 @@
               <li>Office Tools (Word/GoogleSheets)</li>
               <li>Audio Tools (GarageBand)</li>
               <li>Video Tools (DaVinci Resolve)</li>
+              <li>AI Tools (Copilot)</li>
             </ul>
 
             <h3>Organizational Skills</h3>
@@ -69,18 +70,19 @@
               <li>Teamwork</li>
             </ul>
 
-            <h3>Personal Skills</h3>
-            <ul class="skills__list">
-              <li>Gaming (Digital/Tabletop)</li>
-              <li>Music (Guitar/Vocal)</li>
-              <li>Cooking</li>
-            </ul>
-
             <h3>Language Skills</h3>
             <ul class="skills__list">
               <li>Persian (Native)</li>
               <li>English (Advanced)</li>
               <li>Swedish (Learning)</li>
+            </ul>
+
+            <h3>Interests</h3>
+            <ul class="interests__list">
+              <li>Gaming</li>
+              <li>D&D</li>
+              <li>Music</li>
+              <li>Cooking</li>
             </ul>
           </section>
         </aside>
@@ -90,10 +92,10 @@
             <h1>Azad Kavian</h1>
             <h2>Front-End Developer | Software Engineer | Product Builder</h2>
             <p>
-              In addition to being primarily a front-end developer using the Angular framework, I
-              have experience working on numerous projects as a full-stack developer. I've also
-              contributed to a number of projects for designing the UI, and all of these experiences
-              have made me a professional product builder.
+              In addition to being primarily a front-end developer, I am a versatile and experienced
+              software developer with a proven track record of delivering high-quality projects on
+              time and within budget. Skilled in leading and training teams, designing and
+              developing web applications, and implementing innovative solutions using AI.
             </p>
             <ul class="header__content--contact">
               <li>
@@ -125,9 +127,9 @@
                 </h5>
               </div>
               <p class="xp__body">
-                In Vikarno, we design and develop various commercial web software, with a
-                specialization in enterprise financial systems and platforms, to help companies and
-                business owners solve their technical problems.
+                Vikarno is a software agency that offers solutions to the IT industry’s challenges.
+                As a co-founder and a front-end expert, I managed 15 projects from start to finish
+                with a perfect delivery record while leading a team of 3 front-end developers.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -152,9 +154,10 @@
                 </h5>
               </div>
               <p class="xp__body">
-                I started working as a junior front-end developer back in 2017. But over the years
-                as I learned more and more and gained many experiences by solving challenges and
-                developing different products, I became a senior.
+                Navaak is a streaming platform that offers a vast collection of Iranian music,
+                videos, audiobooks, and podcasts. During my time there, I designed and developed a
+                new version of a data management panel, initiated a brand-new reporting panel, and
+                implemented an intelligent content recommender system.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -162,12 +165,14 @@
                 <li class="cv__tag">NgXS</li>
                 <li class="cv__tag">UI Design</li>
                 <li class="cv__tag">Python</li>
+                <li class="cv__tag">Flask</li>
                 <li class="cv__tag">AI</li>
+                <li class="cv__tag">SQL</li>
                 <li class="cv__tag">GraphQL</li>
               </ul>
             </li>
             <li>
-              <img src="assets/images/logo-didex.png" class="xp__logo" />
+              <img src="assets/images/logo-didex.svg" class="xp__logo" />
               <div class="xp__header">
                 <h4 class="xp__header--title">
                   DidEx
@@ -178,18 +183,19 @@
                 </h5>
               </div>
               <p class="xp__body">
-                DidEx is a cryptocurrency exchange and trading platform with many products. As a
-                developer with more experience than my other teammates, I designed the software
-                architecture of all of these products and built this platform from scratch.
+                DidEx is a centralized cryptocurrency exchange and trading platform. In DidEx, I
+                built a trading platform from scratch, supervised and led a team of 4 front-end
+                developers, and customized the TradingView charting library to suit the company's
+                unique needs.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
                 <li class="cv__tag">Angular</li>
+                <li class="cv__tag">Angular Material</li>
                 <li class="cv__tag">NgXS</li>
                 <li class="cv__tag">RxJS</li>
                 <li class="cv__tag">WebSocket</li>
-                <li class="cv__tag">Material</li>
-                <li class="cv__tag">Task Assignment</li>
+                <li class="cv__tag">TradingView</li>
               </ul>
             </li>
             <li>
@@ -204,12 +210,14 @@
                 </h5>
               </div>
               <p class="xp__body">
-                As my first serious role as a web developer, I participated in developing some
-                features and tweaks for the main website of Takhfifan, and started the Yadisa
-                project as my main activity in the team.
+                Takhfifan is the first group-buying company in Iran and has been one of the most
+                successful startups in the past couple of years. I added new features for better UX
+                and created up to 10 email templates and landing pages for marketing campaigns.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
+                <li class="cv__tag">JavaScript</li>
+                <li class="cv__tag">CSS</li>
                 <li class="cv__tag">Backbone.js</li>
                 <li class="cv__tag">Bootstrap</li>
                 <li class="cv__tag">jQuery</li>
@@ -230,10 +238,12 @@
               <ul class="cv__tag--list">
                 <li class="cv__tag">Python</li>
                 <li class="cv__tag">Flask</li>
+                <li class="cv__tag">SQLAlchemy</li>
                 <li class="cv__tag">WebSocket</li>
                 <li class="cv__tag">AI</li>
                 <li class="cv__tag">Bulma</li>
                 <li class="cv__tag">Docker</li>
+                <li class="cv__tag">Prompt Engineering</li>
               </ul>
             </li>
             <li>
@@ -248,7 +258,9 @@
                 <li class="cv__tag">Python</li>
                 <li class="cv__tag">Flask</li>
                 <li class="cv__tag">SQL</li>
+                <li class="cv__tag">AI</li>
                 <li class="cv__tag">Machine Learning</li>
+                <li class="cv__tag">Data Engineering</li>
               </ul>
             </li>
             <li>
@@ -261,6 +273,7 @@
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
                 <li class="cv__tag">Angular</li>
+                <li class="cv__tag">RxJS</li>
                 <li class="cv__tag">Node</li>
                 <li class="cv__tag">Express</li>
                 <li class="cv__tag">Mongoose</li>
@@ -278,6 +291,8 @@
               <ul class="cv__tag--list">
                 <li class="cv__tag">Python</li>
                 <li class="cv__tag">Numpy</li>
+                <li class="cv__tag">Scipy</li>
+                <li class="cv__tag">MatPlotLib</li>
                 <li class="cv__tag">Pandas</li>
               </ul>
             </li>
