--- a/index.html
+++ b/index.html
@@ -79,10 +79,26 @@
 
             <h3>Interests</h3>
             <ul class="interests__list">
-              <li>Gaming</li>
-              <li>D&D</li>
-              <li>Music</li>
-              <li>Cooking</li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-gaming.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/joystick" title="joystick icons">Joystick icons created by Good Ware - Flaticon</a> -->
+                <span>Gaming</span>
+              </li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-dnd.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/d20" title="d20 icons">D20 icons created by Freepik - Flaticon</a> -->
+                <span>D&D</span>
+              </li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-music.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/electric-guitar" title="electric guitar icons">Electric guitar icons created by Freepik - Flaticon</a> -->
+                <span>Music</span>
+              </li>
+              <li>
+                <img class="cv__icon" src="assets/icons/icon-cooking.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/cooking" title="cooking icons">Cooking icons created by Freepik - Flaticon</a> -->
+                <span>Cooking</span>
+              </li>
             </ul>
           </section>
         </aside>
@@ -99,11 +115,13 @@
             </p>
             <ul class="header__content--contact">
               <li>
-                <img class="cv__icon" src="assets/icons/icon-mail.svg" />
+                <img class="cv__icon" src="assets/icons/icon-mail.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Freepik - Flaticon</a> -->
                 <b>azadkavian@gmail.com</b>
               </li>
               <li>
-                <img class="cv__icon" src="assets/icons/icon-phone.svg" />
+                <img class="cv__icon" src="assets/icons/icon-phone.png" />
+                <!-- <a href="https://www.flaticon.com/free-icons/phone" title="phone icons">Phone icons created by Gregor Cresnar - Flaticon</a> -->
                 <b>+98 998 144 9285</b>
               </li>
               <li>
