--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <h3>Programming Skills</h3>
             <ul class="skills__list">
               <li>Angular</li>
-              <li>RxJS/Signal</li>
-              <li>NgXS/NgRx</li>
               <li>TypeScript/JavaScript</li>
-              <li>Material/Bulma/Tailwind</li>
+              <li>NestJS/NodeJS</li>
+              <li>NgXS/NgRx</li>
+              <li>PrimeNG/Material</li>
+              <li>Bootstrap/Bulma/Tailwind</li>
               <li>Python/Flask/SQLAlchemy</li>
-              <li>Node/Express/Mongoose</li>
               <li>Ionic</li>
             </ul>
 
@@ -106,12 +106,12 @@
         <main>
           <section class="header__content">
             <h1>Azad Kavian</h1>
-            <h2>Front-End Developer | Software Engineer | Product Builder</h2>
+            <h2>Software Engineer | Angular Specialist | Product Builder</h2>
             <p>
               In addition to being primarily a front-end developer, I am a versatile and experienced
-              software developer with a proven track record of delivering high-quality projects on
-              time and within budget. Skilled in leading and training teams, designing and
-              developing web applications, and implementing innovative solutions using AI.
+              software developer with a proven track record of delivering over 30 high-quality
+              projects on time and within budget. Skilled in leading and training teams, designing
+              and developing web applications, and implementing innovative solutions using AI.
             </p>
             <ul class="header__content--contact">
               <li>
@@ -141,19 +141,20 @@
                   <em class="xp__header--date"> (2022 - Present) </em>
                 </h4>
                 <h5 class="xp__header--position" style="color: rgb(4, 167, 187)">
-                  Senior Front-end Developer
+                  Senior Software Engineer
                 </h5>
               </div>
               <p class="xp__body">
-                Vikarno is a software agency that offers solutions to the IT industry’s challenges.
-                As a co-founder and a front-end expert, I managed 15 projects from start to finish
-                with a perfect delivery record while leading a team of 3 front-end developers.
+                Vikarno is a software agency addressing IT industry challenges. As a co-founder and
+                programming expert, I led a team of 3 developers, managing 15 projects from start to
+                finish with perfect delivery.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
                 <li class="cv__tag">Angular</li>
                 <li class="cv__tag">NgXS</li>
-                <li class="cv__tag">Ionic</li>
+                <li class="cv__tag">Nx</li>
+                <li class="cv__tag">PrimeNG</li>
                 <li class="cv__tag">Node</li>
                 <li class="cv__tag">Python</li>
                 <li class="cv__tag">UI Design</li>
@@ -172,10 +173,9 @@
                 </h5>
               </div>
               <p class="xp__body">
-                Navaak is a streaming platform that offers a vast collection of Iranian music,
-                videos, audiobooks, and podcasts. During my time there, I designed and developed a
-                new version of a data management panel, initiated a brand-new reporting panel, and
-                implemented an intelligent content recommender system.
+                At Navaak, a streaming platform for Iranian media, I designed a new data management
+                panel, launched a reporting panel, and implemented an intelligent content
+                recommender system.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -201,10 +201,9 @@
                 </h5>
               </div>
               <p class="xp__body">
-                DidEx is a centralized cryptocurrency exchange and trading platform. In DidEx, I
-                built a trading platform from scratch, supervised and led a team of 4 front-end
-                developers, and customized the TradingView charting library to suit the company's
-                unique needs.
+                At DidEx, a centralized cryptocurrency exchange, I built the trading platform from
+                scratch, led a team of 4 front-end developers, and customized the TradingView
+                charting library to meet the company's needs.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -228,9 +227,8 @@
                 </h5>
               </div>
               <p class="xp__body">
-                Takhfifan is the first group-buying company in Iran and has been one of the most
-                successful startups in the past couple of years. I added new features for better UX
-                and created up to 10 email templates and landing pages for marketing campaigns.
+                At Takhfifan, Iran's first group-buying company, I improved UX with new features and
+                created up to 10 email templates and landing pages for marketing campaigns.
               </p>
               <em class="cv__skills">Skills</em>
               <ul class="cv__tag--list">
@@ -244,7 +242,45 @@
           </ol>
 
           <ol class="projects">
-            <h3>Side Projects</h3>
+            <h3>Freelance Projects</h3>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Innovative and Intelligent Language Learning Platform (LingoLab)
+                  <em>(2024)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">PrimeNG</li>
+                <li class="cv__tag">NestJS</li>
+                <li class="cv__tag">TypeORM</li>
+                <li class="cv__tag">WebSocket</li>
+                <li class="cv__tag">Nx</li>
+                <li class="cv__tag">AI</li>
+                <li class="cv__tag">Prompt Engineering</li>
+              </ul>
+            </li>
+            <li>
+              <div class="project__header">
+                <h4>
+                  Therapy and Mental Health Website (Araamma)
+                  <em>(2024)</em>
+                </h4>
+              </div>
+              <em class="cv__skills">Skills</em>
+              <ul class="cv__tag--list">
+                <li class="cv__tag">Angular</li>
+                <li class="cv__tag">PrimeNG</li>
+                <li class="cv__tag">NestJS</li>
+                <li class="cv__tag">TypeORM</li>
+                <li class="cv__tag">WebSocket</li>
+                <li class="cv__tag">Nx</li>
+                <li class="cv__tag">AI</li>
+                <li class="cv__tag">Prompt Engineering</li>
+              </ul>
+            </li>
             <li>
               <div class="project__header">
                 <h4>
