--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="styles/4_education.css" />
     <link rel="stylesheet" href="styles/5_page.css" />
     <link rel="stylesheet" href="styles/6_projects.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="scripts/index.js"></script>
   </head>
   <body>
     <div class="cv__mobile-overlay">
@@ -24,7 +28,7 @@
         To see the content of this page properly, please use a device with bigger screen size.
       </h1>
     </div>
-    <div class="cv__wrapper">
+    <div class="cv__wrapper" id="cvWrapper">
       <div class="cv__page">
         <aside>
           <img class="header__picture" src="assets/images/profile.png" alt="Azad Kavian" />
