--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <ol class="xp">
             <h3>Work Experiences</h3>
             <li>
-              <img src="assets/images/logo-vikarno.svg" class="xp__logo" />
+              <img src="assets/images/logo-vikarno.png" class="xp__logo" />
               <div class="xp__header">
                 <h4 class="xp__header--title">
                   Vikarno
@@ -194,7 +194,7 @@
               </ul>
             </li>
             <li>
-              <img src="assets/images/logo-didex.svg" class="xp__logo" />
+              <img src="assets/images/logo-didex.png" class="xp__logo" />
               <div class="xp__header">
                 <h4 class="xp__header--title">
                   DidEx
